[gd_scene load_steps=109 format=2]

[ext_resource path="res://Player/Player3D/Doll3D.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player/StageScene3D/BaseStageScene3D.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player/Props/platform.png" type="Texture" id=3]
[ext_resource path="res://Player/StageScene3D/Scenes2/SexDoubleDown.gd" type="Script" id=4]

[sub_resource type="AnimationNodeAnimation" id=446]
animation = "CuffedArms-loop"

[sub_resource type="AnimationNodeBlend2" id=447]
filter_enabled = true
filters = [ "Doll3D/Skeleton:Arm.L", "Doll3D/Skeleton:Arm.R", "Doll3D/Skeleton:ForeArm.L", "Doll3D/Skeleton:ForeArm.R", "Doll3D/Skeleton:Hand.L", "Doll3D/Skeleton:Hand.R" ]

[sub_resource type="AnimationNodeAnimation" id=1078]
animation = "SexDoubleDownFast_1-loop"

[sub_resource type="AnimationNodeAnimation" id=1079]
animation = "SexDoubleDownInside_1-loop"

[sub_resource type="AnimationNodeAnimation" id=1080]
animation = "SexDoubleDownTease_1-loop"

[sub_resource type="AnimationNodeAnimation" id=1081]
animation = "SexDoubleDownTease_1-loop"

[sub_resource type="AnimationNodeAnimation" id=1082]
animation = "SexDoubleDown_1-loop"

[sub_resource type="AnimationNodeAnimation" id=1083]
animation = "SexDoubleDown_1-loop"

[sub_resource type="AnimationNodeAnimation" id=1084]
animation = "SexDoubleDown_1-loop"

[sub_resource type="AnimationNodeStateMachineTransition" id=1085]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1086]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1087]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1088]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1089]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1090]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1091]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1092]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1093]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1094]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1095]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1096]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1097]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1098]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1099]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1100]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1101]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1102]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1165]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1166]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1167]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1168]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1169]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1170]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachine" id=1103]
states/SexDoubleDownFast_1-loop/node = SubResource( 1078 )
states/SexDoubleDownFast_1-loop/position = Vector2( 437, 284 )
states/SexDoubleDownInside_1-loop/node = SubResource( 1079 )
states/SexDoubleDownInside_1-loop/position = Vector2( 654, 108 )
states/SexDoubleDownTease_1-loop/node = SubResource( 1081 )
states/SexDoubleDownTease_1-loop/position = Vector2( 496, 12 )
"states/SexDoubleDownTease_1-loop 2/node" = SubResource( 1080 )
"states/SexDoubleDownTease_1-loop 2/position" = Vector2( 115, -11 )
states/SexDoubleDown_1-loop/node = SubResource( 1084 )
states/SexDoubleDown_1-loop/position = Vector2( 203, 129 )
"states/SexDoubleDown_1-loop 2/node" = SubResource( 1082 )
"states/SexDoubleDown_1-loop 2/position" = Vector2( -120, 108 )
"states/SexDoubleDown_1-loop 3/node" = SubResource( 1083 )
"states/SexDoubleDown_1-loop 3/position" = Vector2( -85, 279 )
transitions = [ "SexDoubleDownTease_1-loop", "SexDoubleDownTease_1-loop 2", SubResource( 1085 ), "SexDoubleDownTease_1-loop 2", "SexDoubleDownTease_1-loop", SubResource( 1086 ), "SexDoubleDown_1-loop", "SexDoubleDown_1-loop 2", SubResource( 1087 ), "SexDoubleDown_1-loop 2", "SexDoubleDown_1-loop", SubResource( 1088 ), "SexDoubleDown_1-loop", "SexDoubleDown_1-loop 3", SubResource( 1089 ), "SexDoubleDown_1-loop 3", "SexDoubleDown_1-loop", SubResource( 1090 ), "SexDoubleDownTease_1-loop", "SexDoubleDownFast_1-loop", SubResource( 1091 ), "SexDoubleDownFast_1-loop", "SexDoubleDownTease_1-loop", SubResource( 1092 ), "SexDoubleDownInside_1-loop", "SexDoubleDownFast_1-loop", SubResource( 1093 ), "SexDoubleDownFast_1-loop", "SexDoubleDownInside_1-loop", SubResource( 1094 ), "SexDoubleDown_1-loop", "SexDoubleDownInside_1-loop", SubResource( 1095 ), "SexDoubleDownInside_1-loop", "SexDoubleDown_1-loop", SubResource( 1096 ), "SexDoubleDownTease_1-loop", "SexDoubleDown_1-loop", SubResource( 1097 ), "SexDoubleDown_1-loop", "SexDoubleDownTease_1-loop", SubResource( 1098 ), "SexDoubleDown_1-loop", "SexDoubleDownFast_1-loop", SubResource( 1099 ), "SexDoubleDownFast_1-loop", "SexDoubleDown_1-loop", SubResource( 1100 ), "SexDoubleDownTease_1-loop", "SexDoubleDownInside_1-loop", SubResource( 1101 ), "SexDoubleDownInside_1-loop", "SexDoubleDownTease_1-loop", SubResource( 1102 ), "SexDoubleDown_1-loop 3", "SexDoubleDownFast_1-loop", SubResource( 1165 ), "SexDoubleDownFast_1-loop", "SexDoubleDown_1-loop 3", SubResource( 1166 ), "SexDoubleDownTease_1-loop 2", "SexDoubleDown_1-loop", SubResource( 1167 ), "SexDoubleDown_1-loop", "SexDoubleDownTease_1-loop 2", SubResource( 1168 ), "SexDoubleDown_1-loop 2", "SexDoubleDownTease_1-loop 2", SubResource( 1169 ), "SexDoubleDownTease_1-loop 2", "SexDoubleDown_1-loop 2", SubResource( 1170 ) ]
start_node = "SexDoubleDownTease_1-loop"
graph_offset = Vector2( -287, -56 )

[sub_resource type="AnimationNodeBlendTree" id=1104]
graph_offset = Vector2( -41, 50 )
nodes/Animation/node = SubResource( 446 )
nodes/Animation/position = Vector2( 140, 280 )
nodes/CuffsBlend/node = SubResource( 447 )
nodes/CuffsBlend/position = Vector2( 440, 160 )
nodes/StateMachine/node = SubResource( 1103 )
nodes/StateMachine/position = Vector2( 160, 120 )
nodes/output/position = Vector2( 680, 180 )
node_connections = [ "CuffsBlend", 0, "StateMachine", "CuffsBlend", 1, "Animation", "output", 0, "CuffsBlend" ]

[sub_resource type="AnimationNodeStateMachinePlayback" id=460]

[sub_resource type="AnimationNodeAnimation" id=1107]
animation = "SexDoubleDownFast_2-loop"

[sub_resource type="AnimationNodeAnimation" id=1108]
animation = "SexDoubleDownHands_2-loop"

[sub_resource type="AnimationNodeAnimation" id=1109]
animation = "SexDoubleDownInside_2-loop"

[sub_resource type="AnimationNodeAnimation" id=1110]
animation = "SexDoubleDownNoHand_2-loop"

[sub_resource type="AnimationNodeAnimation" id=1111]
animation = "SexDoubleDownTeaseNoHands_2-loop"

[sub_resource type="AnimationNodeAnimation" id=1112]
animation = "SexDoubleDownTease_2-loop"

[sub_resource type="AnimationNodeAnimation" id=1113]
animation = "SexDoubleDown_2-loop"

[sub_resource type="AnimationNodeStateMachineTransition" id=1114]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1115]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1116]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1117]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1118]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1119]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1120]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1121]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1122]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1123]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1124]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1125]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1126]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1127]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1128]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1129]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1130]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1131]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1161]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1162]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1171]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1172]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1173]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1174]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachine" id=1132]
states/SexDoubleDownFast_2-loop/node = SubResource( 1107 )
states/SexDoubleDownFast_2-loop/position = Vector2( 576, 343 )
states/SexDoubleDownHands_2-loop/node = SubResource( 1108 )
states/SexDoubleDownHands_2-loop/position = Vector2( 16, 314 )
states/SexDoubleDownInside_2-loop/node = SubResource( 1109 )
states/SexDoubleDownInside_2-loop/position = Vector2( 836, 205 )
states/SexDoubleDownNoHand_2-loop/node = SubResource( 1110 )
states/SexDoubleDownNoHand_2-loop/position = Vector2( 4, 214 )
states/SexDoubleDownTeaseNoHands_2-loop/node = SubResource( 1111 )
states/SexDoubleDownTeaseNoHands_2-loop/position = Vector2( 169, 86 )
states/SexDoubleDownTease_2-loop/node = SubResource( 1112 )
states/SexDoubleDownTease_2-loop/position = Vector2( 563, 100 )
states/SexDoubleDown_2-loop/node = SubResource( 1113 )
states/SexDoubleDown_2-loop/position = Vector2( 321, 219 )
transitions = [ "SexDoubleDownTease_2-loop", "SexDoubleDown_2-loop", SubResource( 1114 ), "SexDoubleDown_2-loop", "SexDoubleDownTease_2-loop", SubResource( 1115 ), "SexDoubleDownTease_2-loop", "SexDoubleDownTeaseNoHands_2-loop", SubResource( 1116 ), "SexDoubleDownTeaseNoHands_2-loop", "SexDoubleDownTease_2-loop", SubResource( 1117 ), "SexDoubleDownTease_2-loop", "SexDoubleDownInside_2-loop", SubResource( 1118 ), "SexDoubleDownInside_2-loop", "SexDoubleDownTease_2-loop", SubResource( 1119 ), "SexDoubleDownTease_2-loop", "SexDoubleDownFast_2-loop", SubResource( 1120 ), "SexDoubleDownFast_2-loop", "SexDoubleDownTease_2-loop", SubResource( 1121 ), "SexDoubleDownInside_2-loop", "SexDoubleDown_2-loop", SubResource( 1122 ), "SexDoubleDown_2-loop", "SexDoubleDownInside_2-loop", SubResource( 1123 ), "SexDoubleDown_2-loop", "SexDoubleDownFast_2-loop", SubResource( 1124 ), "SexDoubleDownFast_2-loop", "SexDoubleDown_2-loop", SubResource( 1125 ), "SexDoubleDownInside_2-loop", "SexDoubleDownFast_2-loop", SubResource( 1126 ), "SexDoubleDownFast_2-loop", "SexDoubleDownInside_2-loop", SubResource( 1127 ), "SexDoubleDown_2-loop", "SexDoubleDownNoHand_2-loop", SubResource( 1128 ), "SexDoubleDownNoHand_2-loop", "SexDoubleDown_2-loop", SubResource( 1129 ), "SexDoubleDown_2-loop", "SexDoubleDownHands_2-loop", SubResource( 1130 ), "SexDoubleDownHands_2-loop", "SexDoubleDown_2-loop", SubResource( 1131 ), "SexDoubleDownHands_2-loop", "SexDoubleDownFast_2-loop", SubResource( 1161 ), "SexDoubleDownFast_2-loop", "SexDoubleDownHands_2-loop", SubResource( 1162 ), "SexDoubleDownTeaseNoHands_2-loop", "SexDoubleDown_2-loop", SubResource( 1171 ), "SexDoubleDown_2-loop", "SexDoubleDownTeaseNoHands_2-loop", SubResource( 1172 ), "SexDoubleDownTeaseNoHands_2-loop", "SexDoubleDownNoHand_2-loop", SubResource( 1173 ), "SexDoubleDownNoHand_2-loop", "SexDoubleDownTeaseNoHands_2-loop", SubResource( 1174 ) ]
start_node = "SexDoubleDownTease_2-loop"
graph_offset = Vector2( -119, 60 )

[sub_resource type="AnimationNodeBlendTree" id=1105]
graph_offset = Vector2( -322.532, 1 )
nodes/Animation/node = SubResource( 446 )
nodes/Animation/position = Vector2( 140, 280 )
nodes/CuffsBlend/node = SubResource( 447 )
nodes/CuffsBlend/position = Vector2( 440, 160 )
nodes/StateMachine/node = SubResource( 1132 )
nodes/StateMachine/position = Vector2( 160, 140 )
nodes/output/position = Vector2( 680, 180 )
node_connections = [ "CuffsBlend", 0, "StateMachine", "CuffsBlend", 1, "Animation", "output", 0, "CuffsBlend" ]

[sub_resource type="AnimationNodeStateMachinePlayback" id=473]

[sub_resource type="AnimationNodeAnimation" id=1133]
animation = "SexDoubleDownFast_3-loop"

[sub_resource type="AnimationNodeAnimation" id=1134]
animation = "SexDoubleDownHands_3-loop"

[sub_resource type="AnimationNodeAnimation" id=1135]
animation = "SexDoubleDownInside_3-loop"

[sub_resource type="AnimationNodeAnimation" id=1136]
animation = "SexDoubleDownTeaseNoHands_3-loop"

[sub_resource type="AnimationNodeAnimation" id=1137]
animation = "SexDoubleDownTease_3-loop"

[sub_resource type="AnimationNodeAnimation" id=1138]
animation = "SexDoubleDown_3-loop"

[sub_resource type="AnimationNodeAnimation" id=1139]
animation = "SexDoubleDown_3-loop"

[sub_resource type="AnimationNodeStateMachineTransition" id=1140]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1141]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1142]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1143]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1144]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1145]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1146]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1147]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1148]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1149]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1150]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1151]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1152]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1153]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1154]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1155]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1156]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1157]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1163]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1164]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1175]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1176]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1177]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachineTransition" id=1178]
xfade_time = 0.5

[sub_resource type="AnimationNodeStateMachine" id=1158]
states/SexDoubleDownFast_3-loop/node = SubResource( 1133 )
states/SexDoubleDownFast_3-loop/position = Vector2( 468, 306 )
states/SexDoubleDownHands_3-loop/node = SubResource( 1134 )
states/SexDoubleDownHands_3-loop/position = Vector2( -63, 286 )
states/SexDoubleDownInside_3-loop/node = SubResource( 1135 )
states/SexDoubleDownInside_3-loop/position = Vector2( 686, 188 )
states/SexDoubleDownTeaseNoHands_3-loop/node = SubResource( 1136 )
states/SexDoubleDownTeaseNoHands_3-loop/position = Vector2( 121, 77 )
states/SexDoubleDownTease_3-loop/node = SubResource( 1137 )
states/SexDoubleDownTease_3-loop/position = Vector2( 486, 77 )
states/SexDoubleDown_3-loop/node = SubResource( 1139 )
states/SexDoubleDown_3-loop/position = Vector2( 267, 188 )
"states/SexDoubleDown_3-loop 2/node" = SubResource( 1138 )
"states/SexDoubleDown_3-loop 2/position" = Vector2( -63, 196 )
transitions = [ "SexDoubleDownTease_3-loop", "SexDoubleDown_3-loop", SubResource( 1140 ), "SexDoubleDown_3-loop", "SexDoubleDownTease_3-loop", SubResource( 1141 ), "SexDoubleDownTease_3-loop", "SexDoubleDownInside_3-loop", SubResource( 1142 ), "SexDoubleDownInside_3-loop", "SexDoubleDownTease_3-loop", SubResource( 1143 ), "SexDoubleDownTease_3-loop", "SexDoubleDownFast_3-loop", SubResource( 1144 ), "SexDoubleDownFast_3-loop", "SexDoubleDownTease_3-loop", SubResource( 1145 ), "SexDoubleDown_3-loop", "SexDoubleDownFast_3-loop", SubResource( 1146 ), "SexDoubleDownFast_3-loop", "SexDoubleDown_3-loop", SubResource( 1147 ), "SexDoubleDownInside_3-loop", "SexDoubleDownFast_3-loop", SubResource( 1148 ), "SexDoubleDownFast_3-loop", "SexDoubleDownInside_3-loop", SubResource( 1149 ), "SexDoubleDown_3-loop", "SexDoubleDownInside_3-loop", SubResource( 1150 ), "SexDoubleDownInside_3-loop", "SexDoubleDown_3-loop", SubResource( 1151 ), "SexDoubleDownTeaseNoHands_3-loop", "SexDoubleDownTease_3-loop", SubResource( 1152 ), "SexDoubleDownTease_3-loop", "SexDoubleDownTeaseNoHands_3-loop", SubResource( 1153 ), "SexDoubleDown_3-loop 2", "SexDoubleDown_3-loop", SubResource( 1154 ), "SexDoubleDown_3-loop", "SexDoubleDown_3-loop 2", SubResource( 1155 ), "SexDoubleDownHands_3-loop", "SexDoubleDown_3-loop", SubResource( 1156 ), "SexDoubleDown_3-loop", "SexDoubleDownHands_3-loop", SubResource( 1157 ), "SexDoubleDownHands_3-loop", "SexDoubleDownFast_3-loop", SubResource( 1163 ), "SexDoubleDownFast_3-loop", "SexDoubleDownHands_3-loop", SubResource( 1164 ), "SexDoubleDownTeaseNoHands_3-loop", "SexDoubleDown_3-loop", SubResource( 1175 ), "SexDoubleDown_3-loop", "SexDoubleDownTeaseNoHands_3-loop", SubResource( 1176 ), "SexDoubleDownTeaseNoHands_3-loop", "SexDoubleDown_3-loop 2", SubResource( 1177 ), "SexDoubleDown_3-loop 2", "SexDoubleDownTeaseNoHands_3-loop", SubResource( 1178 ) ]
start_node = "SexDoubleDownTease_3-loop"
graph_offset = Vector2( -222, 25 )

[sub_resource type="AnimationNodeBlendTree" id=1106]
graph_offset = Vector2( -322.532, 74.6842 )
nodes/Animation/node = SubResource( 446 )
nodes/Animation/position = Vector2( 140, 280 )
nodes/CuffsBlend/node = SubResource( 447 )
nodes/CuffsBlend/position = Vector2( 440, 160 )
nodes/StateMachine/node = SubResource( 1158 )
nodes/StateMachine/position = Vector2( 140, 140 )
nodes/output/position = Vector2( 680, 180 )
node_connections = [ "CuffsBlend", 0, "StateMachine", "CuffsBlend", 1, "Animation", "output", 0, "CuffsBlend" ]

[sub_resource type="AnimationNodeStateMachinePlayback" id=1055]

[node name="SexDoubleDown" instance=ExtResource( 2 )]
script = ExtResource( 4 )

[node name="Sprite3D" type="Sprite3D" parent="." index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.317465, -1.77462 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 1, 1, 1022, 62 )

[node name="Doll3D" parent="." index="1" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.804132, -0.120824, 0 )

[node name="Doll3D2" parent="." index="2" instance=ExtResource( 1 )]
transform = Transform( -1, 0, 0, 0, 1, 0, 0, 0, 1, -0.804132, -0.120824, 0 )

[node name="Doll3D3" parent="." index="3" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.804132, -0.120824, 0 )

[node name="AnimationTree" type="AnimationTree" parent="." index="4"]
tree_root = SubResource( 1104 )
anim_player = NodePath("../Doll3D/DollSkeleton2/AnimationPlayer")
parameters/CuffsBlend/blend_amount = 0
parameters/StateMachine/playback = SubResource( 460 )

[node name="AnimationTree2" type="AnimationTree" parent="." index="5"]
tree_root = SubResource( 1105 )
anim_player = NodePath("../Doll3D2/DollSkeleton2/AnimationPlayer")
parameters/CuffsBlend/blend_amount = 0
parameters/StateMachine/playback = SubResource( 473 )

[node name="AnimationTree3" type="AnimationTree" parent="." index="6"]
tree_root = SubResource( 1106 )
anim_player = NodePath("../Doll3D3/DollSkeleton2/AnimationPlayer")
parameters/CuffsBlend/blend_amount = 0
parameters/StateMachine/playback = SubResource( 1055 )

[editable path="Doll3D"]
[editable path="Doll3D/DollSkeleton"]
[editable path="Doll3D/DollSkeleton2"]
[editable path="Doll3D2"]
[editable path="Doll3D2/DollSkeleton"]
[editable path="Doll3D2/DollSkeleton2"]
